--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
     testImplementation "org.assertj:assertj-core:3.19.0"
+
+    testImplementation "org.mockito:mockito-core:3.+" // Mock Test를 위해 추가
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.5.1' // MockitoExtension 사용을 위해 추가
+    testImplementation 'org.mockito:mockito-inline:2.13.0' // final클래스 Scanner를 Mock 하기위해 추가
 }
 
 test {
